# oncall-alert-correlation-engine

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: CASE_STUDY.md
docs/github-actions/: ci.yml
examples/: clean_alerts.json  noisy_alerts.json  service_catalog.json
infra/docker/: Dockerfile
infra/k8s/: deployment.yaml  service.yaml
infra/terraform/: main.tf  outputs.tf  variables.tf
reports/latest/: correlation_report.json  correlation_report.md  metrics.prom
src/oncall_alert_correlation_engine/: __init__.py  api.py  cli.py  engine.py  metrics.py  models.py
tests/: test_engine_cli_api.py
