[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "oncall-alert-correlation-engine"
version = "0.1.0"
description = "Deterministic on-call alert correlation and paging-readiness review."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "prometheus-client>=0.20,<1",
  "pydantic>=2.7,<3",
  "uvicorn>=0.30,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "ruff>=0.5,<1"
]

[project.scripts]
oncall-correlate = "oncall_alert_correlation_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
